--- a/main.ipynb
+++ b/main.ipynb
@@ -1258,13 +1258,33 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  return super().rename(\n"
      ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "ACVR2A_GRCh37_2:148683686-148683686_Frame-Shift-Del_DEL_A-A--    5.0\n",
+       "ZBTB20_GRCh37_3:114058003-114058003_Frame-Shift-Del_DEL_G-G--    4.0\n",
+       "PGM5_GRCh37_9:70993145-70993145_Missense-Mutation_SNP_A-A-G      4.0\n",
+       "UPF3A_GRCh37_13:115057211-115057211_Frame-Shift-Del_DEL_A-A--    4.0\n",
+       "ZC3H18_GRCh37_16:88691141-88691141_Frame-Shift-Del_DEL_C-C--     4.0\n",
+       "BMPR2_GRCh37_2:203420130-203420130_Frame-Shift-Del_DEL_A-A--     4.0\n",
+       "IWS1_GRCh37_2:128238676-128238676_Frame-Shift-Del_DEL_T-T--      4.0\n",
+       "ZNF330_GRCh37_4:142143532-142143532_Frame-Shift-Del_DEL_A-A--    4.0\n",
+       "ARL4D_GRCh37_17:41477713-41477713_3'UTR_DEL_C-C--                4.0\n",
+       "KDM1B_GRCh37_6:18222307-18222307_3'UTR_DEL_A-A--                 4.0\n",
+       "Name: 152, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "source": [
     "# make a confusion matrix with the top feature:\n",
     "# ACVR2A_GRCh37_2:148683686-148683686_Frame-Shift-Del_DEL_A-A--\n",
@@ -1457,14 +1477,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 12
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "source": [
     "# question 10 - Given a mutation check if its in the decision tree then return C or NC\n",
     "# given a patient\n",
@@ -1493,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "source": [
     "############################################# HOMEWORK 5 ##################################################################\n",
     "# question 1 - compute the accuracy for the mutations then show the top 10 of the highest\n",
@@ -1512,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "source": [
     "# top 10 accuracy ratings\n",
     "hw5df.iloc[177, 1:1410].sort_values(ascending=False).head(10)"
@@ -1536,14 +1556,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 15
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "source": [
     "# question 2 - go through all mutations \n",
     "\n",
